@@ -1,4 +1,5 @@
 0.4.2 - currently working on
+- [#2248] Fix: Fix the order of __destruct and unset calls
 - [#2249] Change: Clean up the timer class
 - [#2243] Change: Move createRecursivePageList from templatehelper to db
 - [#2240] Change: Speed up templatehelper::createRecursivePageList
